Changelog
=========

1.0.3 - unreleased
------------------


1.0.2 - 2010-07-18
------------------

- Fixed problems with content menus sticking out of the edit bar under various
  font sizes. This closes http://dev.plone.org/plone/ticket/10736.
  [hannosch]

- Fixed anonymous personal bar spacing with multiple entries. This closes
  http://dev.plone.org/plone/ticket/10743.
  [hannosch]

- Fixed bulleted / numbered lists out of text area in right to left. This
  closes http://dev.plone.org/plone/ticket/9658.
  [emanlove, hannosch]

- Added back styles for grid listings. This refs
  http://dev.plone.org/plone/ticket/10331.
  [hannosch]

- Add globe icon to external links when "Mark External Links" is checked.
  [cwainwright]

- Update license to GPL version 2 only.
  [hannosch]

1.0.1 - 2010-07-07
------------------

- Removed remaining references to empty ``sunburst_js`` folder.
  [hannosch]

1.0 - 2010-07-07
----------------

- Removed IE9.js from Sunburst for now.
  [spliter]

- Cleaned up the Dashboard CSS. This fixes
  http://dev.plone.org/plone/ticket/10516.
  [limi]

- Adding max-width for the language selector, so it works even with
  a ridiculous amount of languages.
  This fixes http://dev.plone.org/plone/ticket/10452.
  [limi]

- Improved default rendering for Python code listings when using the
  syntax coloring, and improved the overall typography for code.
  This fixes http://dev.plone.org/plone/ticket/10692.
  [limi]

- Adding eventDetails styling and vertical table styles, this fixes
  http://dev.plone.org/plone/ticket/10540.
  [limi]

- Lining up the edges of the main layout elements, this fixes
  http://dev.plone.org/plone/ticket/10465.
  [limi]

- Increased space between icons in the sprite to 200px to make collisions
  unlikely. This fixes http://dev.plone.org/plone/ticket/10633.
  [limi]

- Only add content type icons when they are enabled.
  Fixes http://dev.plone.org/plone/ticket/10541
  [davisagli]
